# hakogaki

./: CHANGELOG.md  LICENSE  README.ja.md  README.md  RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.9.1.md  RELEASE_NOTES_1.0.2.md  RELEASE_NOTES_1.0.3.md  RELEASE_NOTES_1.0.4.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/release-notes/: RELEASE_NOTES_1.0.6.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: SceneCard.module.css  SceneCard.tsx  TiptapEditor.tsx
src/components/modals/: EditSceneModal.tsx  ManagementModals.tsx  Modal.module.css  SettingsModal.tsx
src/hooks/: useDataManagement.ts  useFileManagement.ts  useSceneManagement.ts
src/i18n/locales/: en.json  ja.json
src/pages/: EditorPage.module.css  EditorPage.tsx  SceneListPage.module.css  SceneListPage.tsx
src/plugins/: registry.ts
src/stores/: useStoryStore.ts
src/styles/: variables.css
src/utils/: constants.ts  exportUtils.ts
