[package]
name = "tauri-app"
version = "0.20.0"
description = "箱書きエディタ - A scene planning editor for novelists"
authors = ["GennosukeSatsuki"]
license = "MIT"
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(target_os = "android"))'.dependencies]
font-kit = "0.14"
